# ravalink-bot-example

./: .gitignore  Cargo.toml  README.md
src/: client.rs  lib.rs  main.rs  utils.rs
src/actions/: leave.rs  mod.rs  pause.rs  resume.rs  stop.rs
src/caches/: guild.rs
src/commands/: join.rs  leave.rs  mod.rs  pause.rs  ping.rs  play.rs  resume.rs  skip.rs  stop.rs
src/communication/: constants.rs  default.rs  embed.rs  mod.rs
src/handlers/: button.rs  default.rs  guild.rs  interaction.rs  mod.rs
