[package]
name = "rusty-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serenity = "0.12.2"
dotenvy = "0.15.0"
url = "2.5.2"
rdkafka = { version = "0.31", features = ["cmake-build","ssl"] }
nanoid = "0.4.0"
openssl = "0.10.52"
futures = "0.3.28"

[dependencies.ravalink-lib]
path = "/home/crysterz/Projects/ravalink-lib/"

[dependencies.ravalink-interconnect]
path = "/home/crysterz/Projects/ravalink-interconnect/"